--- a/TestTask/Views/_ViewImports.cshtml
+++ b/TestTask/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using TestTask
 @using TestTask.Models
+@using TestTask.Models.ViewModels
+@using TestTask.Services
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
